--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,105 @@
-dm-acme>=0.1.4
-mujoco-py==2.0.2.10
-numpy>=1.18.5
-gym>=0.17.2
-dm-sonnet>=2.0.0
-tensorflow-probability>=0.10.0
-trfl>=1.1.0
-pot>=0.7.0
-scikit-learn>=0.23.1
-tf-nightly>=2.3.0.dev
-dm-reverb-nightly>=0.1.0.dev
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=main
+_openmp_mutex=4.5=1_gnu
+absl-py=1.0.0=pypi_0
+astunparse=1.6.3=pypi_0
+ca-certificates=2021.10.26=h06a4308_2
+cached-property=1.5.2=pypi_0
+cachetools=4.2.4=pypi_0
+certifi=2021.10.8=py37h06a4308_2
+cffi=1.15.0=pypi_0
+charset-normalizer=2.0.10=pypi_0
+cloudpickle=2.0.0=pypi_0
+cycler=0.11.0=pypi_0
+cython=0.29.26=pypi_0
+decorator=5.1.1=pypi_0
+dm-acme=0.3.0=pypi_0
+dm-env=1.5=pypi_0
+dm-launchpad=0.4.1=pypi_0
+dm-reverb-nightly=0.7.0.dev20220117=pypi_0
+dm-sonnet=2.0.0=pypi_0
+dm-tree=0.1.6=pypi_0
+fasteners=0.17.2=pypi_0
+flatbuffers=2.0=pypi_0
+fonttools=4.28.5=pypi_0
+gast=0.4.0=pypi_0
+glfw=2.5.0=pypi_0
+google-auth=2.3.3=pypi_0
+google-auth-oauthlib=0.4.6=pypi_0
+google-pasta=0.2.0=pypi_0
+grpcio=1.43.0=pypi_0
+gym=0.21.0=pypi_0
+h5py=3.6.0=pypi_0
+idna=3.3=pypi_0
+imageio=2.13.5=pypi_0
+importlib-metadata=4.10.1=pypi_0
+jax=0.2.26=pypi_0
+jaxlib=0.1.75=pypi_0
+joblib=1.1.0=pypi_0
+keras-nightly=2.9.0.dev2022011808=pypi_0
+keras-preprocessing=1.1.2=pypi_0
+kiwisolver=1.3.2=pypi_0
+ld_impl_linux-64=2.35.1=h7274673_9
+libclang=12.0.0=pypi_0
+libffi=3.3=he6710b0_2
+libgcc-ng=9.3.0=h5101ec6_17
+libgomp=9.3.0=h5101ec6_17
+libstdcxx-ng=9.3.0=hd4cf53a_17
+loky=3.0.0=pypi_0
+markdown=3.3.6=pypi_0
+matplotlib=3.5.1=pypi_0
+mock=4.0.3=pypi_0
+mujoco-py=2.1.2.14=pypi_0
+ncurses=6.3=h7f8727e_2
+numpy=1.21.5=pypi_0
+oauthlib=3.1.1=pypi_0
+openssl=1.1.1m=h7f8727e_0
+opt-einsum=3.3.0=pypi_0
+packaging=21.3=pypi_0
+pandas=1.3.5=pypi_0
+pickle5=0.0.12=pypi_0
+pillow=9.0.0=pypi_0
+pip=21.2.2=py37h06a4308_0
+portpicker=1.5.0=pypi_0
+pot=0.8.1.0=pypi_0
+protobuf=3.19.3=pypi_0
+psutil=5.9.0=pypi_0
+pyasn1=0.4.8=pypi_0
+pyasn1-modules=0.2.8=pypi_0
+pycparser=2.21=pypi_0
+pyparsing=3.0.6=pypi_0
+python=3.7.7=hcff3b4d_5
+python-dateutil=2.8.2=pypi_0
+pytz=2021.3=pypi_0
+readline=8.1.2=h7f8727e_1
+requests=2.27.1=pypi_0
+requests-oauthlib=1.3.0=pypi_0
+rsa=4.8=pypi_0
+scikit-learn=1.0.2=pypi_0
+scipy=1.7.3=pypi_0
+seaborn=0.11.2=pypi_0
+setuptools=58.0.4=py37h06a4308_0
+six=1.16.0=pypi_0
+sqlite=3.37.0=hc218d9a_0
+tabulate=0.8.9=pypi_0
+tb-nightly=2.8.0a20220118=pypi_0
+tensorboard-data-server=0.6.1=pypi_0
+tensorboard-plugin-wit=1.8.1=pypi_0
+tensorflow-io-gcs-filesystem=0.23.1=pypi_0
+tensorflow-probability=0.15.0=pypi_0
+termcolor=1.1.0=pypi_0
+tf-estimator-nightly=2.9.0.dev2022011809=pypi_0
+tf-nightly=2.9.0.dev20220118=pypi_0
+threadpoolctl=3.0.0=pypi_0
+tk=8.6.11=h1ccaba5_0
+trfl=1.2.0=pypi_0
+typing-extensions=4.0.1=pypi_0
+urllib3=1.26.8=pypi_0
+werkzeug=2.0.2=pypi_0
+wheel=0.37.1=pyhd3eb1b0_0
+wrapt=1.13.3=pypi_0
+xz=5.2.5=h7b6447c_0
+zipp=3.7.0=pypi_0
+zlib=1.2.11=h7f8727e_4
